# unica-course-allocation

./: .bandit  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .ruff.toml  .yamllint  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: README.md  convertisseur.py  courses.csv  coursesS1.csv  coursesS1_old.csv  coursesS2.csv  coursesS2_old.csv  parameters.json  syntheticStudentGenerator.py  syntheticStudentGeneratorParam.py
data/test/extreme_popularity/: README.md
data/test/high_pressure/: README.md
data/test/mandatory_courses_data/: README.md
data/test/medium_realistic_data/: README.md
data/test/timetable_conflicts/: README.md
data/test/égalite_data/: README.md
docs/rapport/: Annexe I - Brouillon et Réflexions sur les Métriques.tex  Annexe II - Brouillon et Réflexions sur les Objectifs.tex  rapport.cls  rapport_projet.tex  rapport_projet_v2.aux  rapport_projet_v2.bbl  rapport_projet_v2.blg  rapport_projet_v2.fdb_latexmk  rapport_projet_v2.fls  rapport_projet_v2.out  rapport_projet_v2.tex  rapport_projet_v2.toc  refs.bib
docs/rapport/archive/: rapport_projet.tex
docs/rapport/img/: Dashboard UI Diagram.drawio  Project Flow Diagram.drawio
opl/: affectation_UE.mod
scripts/Metrics/: README.md  metrics_aggregationMetrics.py  metrics_distributionAnalyser.py  metrics_hypothesisTesting.py  metrics_utils.py
scripts/Metrics/srcFiles/: FCFSaffectation.csv  courses.csv  incompatibilitiesMatrix.csv  parameters.json  studentsRandom.csv
tests/unitests/: test_metrics.py
(+3 files in other folders)
