[project]
name = "unica-course-allocation"
version = "0.1.0"
description = "Course allocation system"
authors = [{ name = "Minh Hoang" }]
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "N816"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F841"]
