[project]
name = "unica-course-allocation"
version = "0.1.0"
description = "Course allocation system"
authors = [{ name = "Minh Hoang" }]
requires-python = ">=3.12"

[tool.ruff]
line-length = 88
target-version = "py312"
# Dossiers à ignorer
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F841"]
